--- a/pvz/src/PriceList.css
+++ b/pvz/src/PriceList.css
@@ -3,3 +3,11 @@
     grid-template-columns: 1fr 1fr 1fr;
 
 }
+
+
+.myBadge {    
+    padding: 1em;
+    border-radius: 1em 1em 1em 1em;
+    background-color: brown;
+
+}
